MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/AdSetName__c.field-meta.xml
<CustomField>
    <fullName>AdSetName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ad set name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>