MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Allocated_Units__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Units__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Allocated Units</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>