MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Ambassador__c.field-meta.xml
<CustomField>
    <fullName>Ambassador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ambassador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Ambassador)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>