MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Apartment_Building_Villa_Number__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Building_Villa_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Apartment/Building/Villa Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>