MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/AreaSqmt__c.field-meta.xml
<CustomField>
    <fullName>AreaSqmt__c</fullName>
    <label>Area(Sqmt)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-250 SQM</fullName>
            </value>
            <value>
                <fullName>250-500 SQM</fullName>
            </value>
            <value>
                <fullName>500-1,000 SQM</fullName>
            </value>
            <value>
                <fullName>1,000-1,500 SQM</fullName>
            </value>
            <value>
                <fullName>1,500-2,000 SQM</fullName>
            </value>
            <value>
                <fullName>2,000-2,500 SQM</fullName>
            </value>
            <value>
                <fullName>2,500-5,000 SQM</fullName>
            </value>
            <value>
                <fullName>5,000-10,000 SQM</fullName>
            </value>
            <value>
                <fullName>10,000-25,000 SQM</fullName>
            </value>
            <value>
                <fullName>25,000-50,000 SQM</fullName>
            </value>
            <value>
                <fullName>50,000-75,000 SQM</fullName>
            </value>
            <value>
                <fullName>75,000-100,000 SQM</fullName>
            </value>
            <value>
                <fullName>Above 100,000 SQM</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Disclosed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>