MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/attendingthePropertyRoadshow__c.field-meta.xml
<CustomField>
    <fullName>attendingthePropertyRoadshow__c</fullName>
    <label>Attending the Property Roadshow</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jeddah</fullName>
            </value>
            <value>
                <fullName>Riyadh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>