MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/BrokerAgency__c.field-meta.xml
<CustomField>
    <fullName>BrokerAgency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the broker agency registered the lead</description>
    <label>Broker Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Broker Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>