MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/BrokerAgency_Name__c.field-meta.xml
<CustomField>
    <fullName>BrokerAgency_Name__c</fullName>
    <formula>BrokerAgency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Agency Name</label>
    <type>Text</type>
</CustomField>