MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/BrokerAgentMobile__c.field-meta.xml
<CustomField>
    <fullName>BrokerAgentMobile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Agent Mobile</label>
    <type>Phone</type>
</CustomField>