MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Buyer_Role__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Role__c</fullName>
    <label>Buyer Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Additional Buyer 1</fullName>
            </value>
            <value>
                <fullName>Additional Buyer 2</fullName>
            </value>
            <value>
                <fullName>Additional Buyer 3</fullName>
            </value>
            <value>
                <fullName>Additional Buyer 4</fullName>
            </value>
            <value>
                <fullName>Additional Buyer 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>