MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Buyer_Type__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Type__c</fullName>
    <label>Buyer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UAE Resident</fullName>
            </value>
            <value>
                <fullName>Non-Resident</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
                <isActive>false</isActive>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Joint</fullName>
                <isActive>false</isActive>
                <label>Joint</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>