MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Bypass_RoundRobin__c.field-meta.xml
<CustomField>
    <fullName>Bypass_RoundRobin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass RoundRobin</label>
    <type>Checkbox</type>
</CustomField>