MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Call_Task_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Call_Task_Milestone__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Call Task Milestone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>