MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Call_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Task_Status__c</fullName>
    <label>Call Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Task 1</fullName>
            </value>
            <value>
                <fullName>Call Task 2</fullName>
            </value>
            <value>
                <fullName>Call Task 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>