MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Campaign_Number__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>