MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/ClientPurchaseTimeline__c.field-meta.xml
<CustomField>
    <fullName>ClientPurchaseTimeline__c</fullName>
    <label>Client Purchase Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>0-3 months</fullName>
            </value>
            <value>
                <fullName>3-6 months</fullName>
            </value>
            <value>
                <fullName>3-9 months</fullName>
            </value>
            <value>
                <fullName>0-12 months</fullName>
            </value>
            <value>
                <fullName>Over one year</fullName>
            </value>
            <value>
                <fullName>Not Disclosed</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>