MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/CountryOfResidence__c.field-meta.xml
<CustomField>
    <fullName>CountryOfResidence__c</fullName>
    <label>Country of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>