MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <formula>TEXT( CreatedDate )</formula>
    <label>Created Time</label>
    <type>Text</type>
</CustomField>