MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Cross_Sell_Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell_Lead_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cross Sell Lead Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>