MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Customer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comments__c</fullName>
    <description>This field will be used to store customer comments</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Comments</label>
    <type>TextArea</type>
</CustomField>