MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Client</fullName>
                <default>true</default>
                <label>New Client</label>
            </value>
            <value>
                <fullName>VIP Client</fullName>
            </value>
            <value>
                <fullName>VVIP Client</fullName>
            </value>
            <value>
                <fullName>Non-Profit Organisation eg. Charity/ Donations Organization (UAE / Non UAE based)</fullName>
            </value>
            <value>
                <fullName>Money Value Transfer Services eg. Currency exchange, Virtual or Digital Asset Exchange (UAE / Non UAE based)</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
                <isActive>false</isActive>
                <label>Existing Client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>