MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Do_Not_Survey__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Survey</label>
    <type>Checkbox</type>
</CustomField>