MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Egypt_Assignment_Number__c.field-meta.xml
<CustomField>
    <fullName>Egypt_Assignment_Number__c</fullName>
    <label>Egypt Assignment Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>