MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Egypt_Escalation_Last_Assigned_Time__c.field-meta.xml
<CustomField>
    <fullName>Egypt_Escalation_Last_Assigned_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Egypt Escalation Last Assigned Time</label>
    <type>DateTime</type>
</CustomField>