MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Egypt_Escalation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Egypt_Escalation_Stage__c</fullName>
    <label>Egypt Escalation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Escalation</fullName>
            </value>
            <value>
                <fullName>Second Escalation</fullName>
            </value>
            <value>
                <fullName>Third Escalation</fullName>
            </value>
            <value>
                <fullName>Flagged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>