MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Egypt_First_Escalation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Egypt_First_Escalation_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Egypt First Escalation Date Time</label>
    <type>DateTime</type>
</CustomField>