MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Egypt_Lead_Qualified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Egypt_Lead_Qualified_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Egypt Lead Qualified Date/Time</label>
    <type>DateTime</type>
</CustomField>