MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Egyptian_ID__c.field-meta.xml
<CustomField>
    <fullName>Egyptian_ID__c</fullName>
    <description>Modon Egyptian ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Egyptian ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>