MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>LEFT(Email, 2) &amp;&quot;*********&quot; &amp; RIGHT(Email, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>