MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Email_Correct_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Correct_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Correct Address</label>
    <type>Email</type>
</CustomField>