MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Email_Validated__c.field-meta.xml
<CustomField>
    <fullName>Email_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Validated</label>
    <type>Checkbox</type>
</CustomField>