MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/EmailSubscriptionstatus__c.field-meta.xml
<CustomField>
    <fullName>EmailSubscriptionstatus__c</fullName>
    <defaultValue>&quot;Yes&quot;</defaultValue>
    <label>Email Subscription status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>