MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/En_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>En_MobilePhone__c</fullName>
    <label>Mobile</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>