MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/En_Nationality__c.field-meta.xml
<CustomField>
    <fullName>En_Nationality__c</fullName>
    <label>Nationality</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>