MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/EnquiryCategory__c.field-meta.xml
<CustomField>
    <fullName>EnquiryCategory__c</fullName>
    <label>Enquiry Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>EnquiryCategory</valueSetName>
    </valueSet>
</CustomField>