MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Existing_Lead__c.field-meta.xml
<CustomField>
    <fullName>Existing_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads (Existing Lead)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>