MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Existing_Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Existing_Lead_Number__c</fullName>
    <formula>Existing_Lead__r.LeadNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Lead Number</label>
    <type>Text</type>
</CustomField>