MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Existing_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Existing_Lead_Source__c</fullName>
    <formula>TEXT(Existing_Lead__r.LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Lead Source</label>
    <type>Text</type>
</CustomField>