MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/ExistingLeadOwnerName__c.field-meta.xml
<CustomField>
    <fullName>ExistingLeadOwnerName__c</fullName>
    <formula>Existing_Lead__r.Existing_Lead__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Existing_Lead__r.Existing_Lead__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Lead Owner Name</label>
    <type>Text</type>
</CustomField>