MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Expression_of_interest_Verification_OTP__c.field-meta.xml
<CustomField>
    <fullName>Expression_of_interest_Verification_OTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expression of interest Verification OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>