MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>External_System_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External System ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>