MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/ExternalLeadId__c.field-meta.xml
<CustomField>
    <fullName>ExternalLeadId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>