MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/First_Escalation_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Escalation_Time__c</fullName>
    <description>Field for MODON-Egypt first escalation DateTime stamp.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Escalation Time</label>
    <type>DateTime</type>
</CustomField>