MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Invited_Event__c.field-meta.xml
<CustomField>
    <fullName>Invited_Event__c</fullName>
    <label>Invited Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wadeem Sales Launch</fullName>
            </value>
            <value>
                <fullName>Wadeem Sales Public Launch</fullName>
            </value>
            <value>
                <fullName>REH Emirates Palace VIP</fullName>
            </value>
            <value>
                <fullName>REH Emirates Palace Public</fullName>
            </value>
            <value>
                <fullName>REH22102025</fullName>
            </value>
            <value>
                <fullName>Bashayer09122025</fullName>
            </value>
            <value>
                <fullName>Muheira29012026</fullName>
            </value>
            <value>
                <fullName>Tara14032026</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>