MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Is_Cross_Sell_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Cross_Sell_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cross Sell Lead</label>
    <type>Checkbox</type>
</CustomField>