MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/IsEOI__c.field-meta.xml
<CustomField>
    <fullName>IsEOI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies leads created or updated through the EOI journey.</description>
    <label>Is EOI</label>
    <type>Checkbox</type>
</CustomField>