MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/LanguagePreference__c.field-meta.xml
<CustomField>
    <fullName>LanguagePreference__c</fullName>
    <defaultValue>&apos;English&apos;</defaultValue>
    <label>Language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Deutsch</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Turkish</fullName>
            </value>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>Taiwanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Language Preference</fullName>
                <isActive>false</isActive>
                <label>Language Preference</label>
            </value>
            <value>
                <fullName>Предпочтительный язык</fullName>
                <isActive>false</isActive>
                <label>Предпочтительный язык</label>
            </value>
            <value>
                <fullName>اللغة المفضلة</fullName>
                <isActive>false</isActive>
                <label>اللغة المفضلة</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>