MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Activity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>