MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Lead_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Age_Days__c</fullName>
    <formula>IF(
    NOT(ISBLANK(ConvertedDate)),
    ConvertedDate - DATEVALUE(CreatedDate),
    TODAY() - DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>